--- a/static/scss/generic/_helpers.scss
+++ b/static/scss/generic/_helpers.scss
@@ -296,11 +296,11 @@
 @mixin maas-vertical-alignment {
   .align-vertically {
     @media only screen and (min-width : 768px) {
-      position: relative;
-      top: 0;
-      -webkit-transform: translateY(50%);
-      -ms-transform: translateY(50%);
-      transform: translateY(50%);
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
     }
   }
 }
